--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --backgroundColor: rgb(160, 109, 5);
   --textColor: rgb(24, 10, 1);
   --hoverColor: rgb(160, 109, 5);
+  --hoverbgcolor: rgb(137, 111, 59);
 }
 
 .header {
@@ -30,22 +31,37 @@
   background: var(--textColor);
   color: var(--backgroundColor);
   height: 100vh;
-  padding: 20px;
+  padding: 20px 10px;
   margin: 5px;
 }
 
+.home .post {
+  background: var(--textColor);
+  color: var(--backgroundColor);
+  padding: 20px 10px;
+  margin: 5px;
+  height: 100;
+}
+
 .contents {
+  width: 90%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin: 15px auto;
+  border-radius: 10px;
+}
+
+.main-content {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  justify-content: center;
-  margin: 10px;
-  padding: 10px;
+  padding: 10px 0 10px 10px;
 }
 
 .contents img {
-  width: 60px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
   border: 4px solid var(--backgroundColor);
 }
@@ -54,6 +70,7 @@
   max-width: 200px;
   align-items: center;
   padding: 0 8px;
+  margin: 5px 0 0 0;
 }
 
 .contents:hover {
@@ -63,8 +80,35 @@
 }
 
 .contents:hover img {
-
   border: 4px solid var(--textColor);
 }
+
+.contents button {
+  background: var(--textColor);
+  color: var(--textColor);
+  border: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 2px 8px;
+  font-size: 17px;
+}
+
+.contents:hover button {
+  background: var(--hoverbgcolor);
+  color: var(--textColor);
+}
+
+.contents button:hover {
+  background: white;
+}
+
+
+
+
+
+
+
+
+
 
 
