--- a/src/index.css
+++ b/src/index.css
@@ -30,17 +30,9 @@
 .home {
   background: var(--textColor);
   color: var(--backgroundColor);
-  height: 100vh;
+  height: 100%;
   padding: 20px 10px;
   margin: 5px;
-}
-
-.home .post {
-  background: var(--textColor);
-  color: var(--backgroundColor);
-  padding: 20px 10px;
-  margin: 5px;
-  height: 100;
 }
 
 .contents {
