--- a/src/index.css
+++ b/src/index.css
@@ -25,38 +25,78 @@
   justify-content: space-between;
   display: flex;
   font-size: 1.2rem;
+  color: var(--textColor);
 }
 
 .home {
   color: var(--backgroundColor);
   height: 100%;
   padding: 20px 0;
-  margin: 5px;
+  margin: 5px auto;
+  max-width: 600px;
 }
 
 .Temp {
   background: var(--textColor);
   width: 95%;
-  height: 25vh;
+  height: 30vh;
   border-radius: 12px;
   margin: 8px auto;
   position: relative;
+  display: block;
+  align-items: center;
+  justify-content: center;
+}
+
+.Temp .info {
+  display: flex;
+  font-size: .7rem;
+  justify-content: space-between;
+  margin: 5px 10px;
+  padding: 7px;
+}
+
+.Temp .bal {
+  display: flex;
+}
+
+.Temp .bal .eye {
+  margin: 0 0 0 5px;
+}
+
+.Temp .money {
+  color: var(--backgroundColor);
+  position: absolute;
+  padding: 4px 10px;
+  margin: 10px 30px;
+  border-radius: 5px;
+  background: var(--backgroundColor);
+  color: var(--textColor);
+  font-weight: 600;
 }
 
 
-.Temp .cont-icon {
+.Temp .cont-icons {
   position: absolute;
   bottom: 0;
-  width: 95%;
+  width: 100%;
   margin: 10px auto;
+  display: block;
 }
 
-.Temp .Icons {
-  padding: 8px;
+.Temp .icons {
+  padding: 4px;
   display: flex;
-  height: 20%;
+  height: 18%;
   justify-content: space-around;
-  width: 100%;
+  /* width: 300px; */
+  text-align: center;
+  margin: 0 auto;
+}
+
+.Temp .icon-Note {
+  width: 55px;
+  margin: 0 auto;
 }
 
 .Temp .icon {
@@ -64,8 +104,17 @@
   background: var(--backgroundColor);
   padding: 8px;
   border-radius: 5px;
-  font-size: 1.2rem;  
-  height: 20px;
+  font-size: 1rem;  
+  height: 15px;
+  width: 19px;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.Temp .iconNote {
+  font-size: .7rem;
+  margin: 5px auto;
+  text-align: center;
 }
 
 
@@ -129,7 +178,8 @@
 
 .TopUsers button {
   background: white;
-  color: white;
+  color: var(--backgroundColor);
+  /* border: 1px solid var(--backgroundColor); */
   border: none;
   height: 20px;
   width: 20px;
