--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@
   max-width: 600px;
 }
 
+h3 {
+  text-align: center;
+  padding: 10px;
+  border-bottom: 2px solid var(--textColor);
+}
+
 .Temp {
   background: var(--textColor);
   width: 95%;
